Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -68,7 +68,7 @@
       "type": "series",
       "name": "This Monster Wants to Eat Me",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183385-f1TgnttLckBT.jpg",
-      "description": "Genres: Drama, Horror, Psychological, Romance, Supernatural\nTags:Monster Girl/Female Protagonist/Suicide/Primarily Female Cast/Orphan/Yuri/LGBTQ+ Themes/Mermaid/Seinen/Coastal/Rural/Mythology/Cannibalism\n<i>“I’ve come to eat you.”</i><br><br> So softly utters the mermaid Shiori as she emerges from the sea and takes high school girl Hinako by the hand. Hinako lives alone in a town by the sea and possesses an unusually delicious body that is irresistible to nearby monsters. To ensure that she matures to the best condition, Shiori seeks to protect Hinako—all so that someday, she can devour every piece of her. What will become of Hinako’s feelings as this looming unjust death closes in on her…?\n<BR><BR>\n(Source: Yen Press)"
+      "description": "Genres: Drama, Horror, Psychological, Romance, Supernatural\nTags:Monster Girl/Female Protagonist/Suicide/Primarily Female Cast/Yuri/Orphan/LGBTQ+ Themes/Mermaid/Seinen/Coastal/Rural/Mythology/Cannibalism\n<i>“I’ve come to eat you.”</i><br><br> So softly utters the mermaid Shiori as she emerges from the sea and takes high school girl Hinako by the hand. Hinako lives alone in a town by the sea and possesses an unusually delicious body that is irresistible to nearby monsters. To ensure that she matures to the best condition, Shiori seeks to protect Hinako—all so that someday, she can devour every piece of her. What will become of Hinako’s feelings as this looming unjust death closes in on her…?\n<BR><BR>\n(Source: Yen Press)"
     },
     {
       "id": "tt36593026",
@@ -145,7 +145,7 @@
       "type": "series",
       "name": "Yano-kun's Ordinary Days",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183965-7oMzkJp4FUyP.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Seinen/Female Protagonist/Primarily Teen Cast/School/Heterosexual/Urban/Slapstick\nKiyoko Yoshida is an overanxious class representative who can’t help but worry about Tsuyoshi Yano, who sits beside her. Tsuyoshi comes to school covered in bruises, and as Kiyoko tends to him day after day, the two draw closer. Where will Kiyoko’s feelings take her? Will Tsuyoshi’s life ever be normal? A romantic comedy between an anxious girl and a boy who’s always injured is about to begin!\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Seinen/Primarily Teen Cast/Female Protagonist/School/Heterosexual/Urban/Slapstick\nKiyoko Yoshida is an overanxious class representative who can’t help but worry about Tsuyoshi Yano, who sits beside her. Tsuyoshi comes to school covered in bruises, and as Kiyoko tends to him day after day, the two draw closer. Where will Kiyoko’s feelings take her? Will Tsuyoshi’s life ever be normal? A romantic comedy between an anxious girl and a boy who’s always injured is about to begin!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt28306749",
