Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -28,7 +28,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt33503342"
       },
-      "description": "Genres: Romance\nTags:Full CGI/Artificial Intelligence/Robots/Software Development/Fake Relationship/Heterosexual/Real Robot\nThe story is centered around the main character, Akira, and his scientifically created girlfriend, No. 0.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Romance, Sci-Fi\nTags:Full CGI/Artificial Intelligence/Robots/Software Development/Fake Relationship/Heterosexual/Real Robot\nThe story is centered around the main character, Akira, and his scientifically created girlfriend, No. 0.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt21996220",
