Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -341,7 +341,7 @@
       "type": "series",
       "name": "Aldnoah.Zero: Ame no Danshou - The Penultimate Truth",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181440-YfrrFmLHwFBR.jpg",
-      "description": "Genres: Fantasy, Mecha, Sci-Fi\nTags:Philosophy/Military/Male Protagonist/Space/War/Super Robot/Real Robot/Space Opera\nAn epilogue OVA bundled with the <i>Aldnoah.Zero</i> Blu-ray Disc BOX."
+      "description": "Genres: Fantasy, Sci-Fi\nTags:Philosophy/Military/Male Protagonist/Space/War/Super Robot/Real Robot/Space Opera\nAn epilogue OVA bundled with the <i>Aldnoah.Zero</i> Blu-ray Disc BOX."
     },
     {
       "id": "tt5296398",
