Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -118,7 +118,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt38507195"
       },
-      "description": "Genres: Horror, Sci-Fi\nTags:Female Protagonist/Full CGI/Isekai/Denpa/Cosmic Horror\nOne day, Shiori Maezawa, an ordinary high school girl, cracked her smartphone while falling down a staircase. As she wakes up, she finds herself in a deserted, parallel world that looks like Yokohama.\n<br><br>\nWhen she looks at her smartphone, she finds a photo of herself that she doesn't remember posting on social media. What’s the source of this mysterious post?\n<br><br>\nWill she be able to escape from this strange smartphone labyrinth?\n<br><br>\n(Source: Official Site, translated)"
+      "description": "Genres: Horror, Sci-Fi\nTags:Female Protagonist/Isekai/Full CGI/Denpa/Cosmic Horror\nOne day, Shiori Maezawa, an ordinary high school girl, cracked her smartphone while falling down a staircase. As she wakes up, she finds herself in a deserted, parallel world that looks like Yokohama.\n<br><br>\nWhen she looks at her smartphone, she finds a photo of herself that she doesn't remember posting on social media. What’s the source of this mysterious post?\n<br><br>\nWill she be able to escape from this strange smartphone labyrinth?\n<br><br>\n(Source: Official Site, translated)"
     },
     {
       "id": "tt39228706",
