--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -18,17 +18,17 @@
       "behaviorHints": {
         "defaultVideoId": "tt38650409"
       },
-      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Agender/Isekai/Medieval/Male Protagonist/Demons/Femboy/Shounen\nThe second movie in the <i>Tensei Shitara Slime Datta Ken</i> series.<br><br>\nAfter concluding the opening ceremony of the Demon Kingdom Federation Tempest, Rimuru and his companions are invited by the Celestial Emperor Hermesia of the great elven nation – the Magi Dynasty Salion – to visit her private resort island. As the group enjoys their brief vacation, a mysterious woman named Yura appears. A new incident unfolds against the backdrop of the boundless azure sea.<br><br>\n\n(Source: Crunchyroll)<br><br>\n<i>Note: Relations are provisional and subject to change.</i>"
+      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Medieval/Isekai/Male Protagonist/Demons/Agender/Shounen/Femboy\nThe second movie in the <i>Tensei Shitara Slime Datta Ken</i> series.<br><br>\nAfter concluding the opening ceremony of the Demon Kingdom Federation Tempest, Rimuru and his companions are invited by the Celestial Emperor Hermesia of the great elven nation – the Magi Dynasty Salion – to visit her private resort island. As the group enjoys their brief vacation, a mysterious woman named Yura appears. A new incident unfolds against the backdrop of the boundless azure sea.<br><br>\n\n(Source: Crunchyroll)<br><br>\n<i>Note: Relations are provisional and subject to change.</i>"
     },
     {
-      "id": "tt38650422",
+      "id": "tt1592253",
       "type": "movie",
-      "name": "Boku no Kokoro no Yabai Yatsu Movie",
+      "name": "The Dangers in My Heart: The Movie",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182317-zzpOnAECrM2o.png",
       "behaviorHints": {
-        "defaultVideoId": "tt38650422"
+        "defaultVideoId": "tt1592253"
       },
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/School/Coming of Age/Male Protagonist/Female Protagonist/Primarily Teen Cast/Food/Tsundere/Chuunibyou/Shounen\nA re-edit of both anime seasons featuring newly added footage and will depict the story of Ichikawa and Yamada after the events of the TV series."
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/School/Coming of Age/Male Protagonist/Female Protagonist/Primarily Teen Cast/Tsundere/Food/Chuunibyou/Shounen\nA re-edit of both anime seasons featuring newly added footage and will depict the story of Ichikawa and Yamada after the events of the TV series."
     },
     {
       "id": "tt36148135",
@@ -38,7 +38,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt36148135"
       },
-      "description": "Genres: Action, Sci-Fi, Supernatural, Thriller\nTags:Aliens/Time Loop/War/Gore/Robots/Survival/Heterosexual\nAfter an unidentified plant from outer space invasion, Rita finds herself trapped in a time loop, forced to relive the same day over and over again. With each loop, she learns. She fights. Her memories and experiences sharpen her skills, turning her into a formidable warrior. Yet, the endless cycle of death and solitude begins to wear her down. Then, she meets Keiji. <i> \"I've been repeating this day too,\" </i> he says. Two lost souls, trapped in an endless war. Could their meeting change fate?\n<br><br>\n(Source: Warner Bros. Japan Anime)\n<br><br>\n<i>Note: The film received an early premiere at the 2025 Annecy International Animation Film Festival  on June 9, 2025.</i>"
+      "description": "Genres: Action, Sci-Fi, Supernatural, Thriller\nTags:Aliens/Time Loop/War/Gore/Survival/Robots/Heterosexual\nAfter an unidentified plant from outer space invasion, Rita finds herself trapped in a time loop, forced to relive the same day over and over again. With each loop, she learns. She fights. Her memories and experiences sharpen her skills, turning her into a formidable warrior. Yet, the endless cycle of death and solitude begins to wear her down. Then, she meets Keiji. <i> \"I've been repeating this day too,\" </i> he says. Two lost souls, trapped in an endless war. Could their meeting change fate?\n<br><br>\n(Source: Warner Bros. Japan Anime)\n<br><br>\n<i>Note: The film received an early premiere at the 2025 Annecy International Animation Film Festival  on June 9, 2025.</i>"
     },
     {
       "id": "tt38649153",
