Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -38,7 +38,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt36148135"
       },
-      "description": "Genres: Action, Sci-Fi, Supernatural, Thriller\nTags:Aliens/Time Loop/War/Gore/Survival/Robots/Heterosexual\nAfter an unidentified plant from outer space invasion, Rita finds herself trapped in a time loop, forced to relive the same day over and over again. With each loop, she learns. She fights. Her memories and experiences sharpen her skills, turning her into a formidable warrior. Yet, the endless cycle of death and solitude begins to wear her down. Then, she meets Keiji. <i> \"I've been repeating this day too,\" </i> he says. Two lost souls, trapped in an endless war. Could their meeting change fate?\n<br><br>\n(Source: Warner Bros. Japan Anime)\n<br><br>\n<i>Note: The film received an early premiere at the 2025 Annecy International Animation Film Festival  on June 9, 2025.</i>"
+      "description": "Genres: Action, Sci-Fi, Supernatural, Thriller\nTags:Aliens/Time Loop/War/Gore/Survival/Robots/Heterosexual/Female Protagonist\nAfter an unidentified plant from outer space invasion, Rita finds herself trapped in a time loop, forced to relive the same day over and over again. With each loop, she learns. She fights. Her memories and experiences sharpen her skills, turning her into a formidable warrior. Yet, the endless cycle of death and solitude begins to wear her down. Then, she meets Keiji. <i> \"I've been repeating this day too,\" </i> he says. Two lost souls, trapped in an endless war. Could their meeting change fate?\n<br><br>\n(Source: Warner Bros. Japan Anime)\n<br><br>\n<i>Note: The film received an early premiere at the 2025 Annecy International Animation Film Festival  on June 9, 2025.</i>"
     },
     {
       "id": "tt38649153",
@@ -108,7 +108,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt39195826"
       },
-      "description": "Genres: Comedy\nTags:Female Protagonist/Parody/Primarily Female Cast\nFour part adaptation of the <i>Girls und Panzer: Motto Love Love Sakusen desu!</i> manga.\n<br><br>\n(Source: Natalie Comics)"
+      "description": "Genres: Comedy\nTags:Parody/Female Protagonist/Primarily Female Cast\nFour part adaptation of the <i>Girls und Panzer: Motto Love Love Sakusen desu!</i> manga.\n<br><br>\n(Source: Natalie Comics)"
     },
     {
       "id": "tt38507195",
