Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -18,7 +18,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt38650422"
       },
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Coming of Age/School/Male Protagonist/Female Protagonist/Primarily Teen Cast/Food/Tsundere/Shounen/Chuunibyou\nA re-edit of both anime seasons featuring newly added footage and will depict the story of Ichikawa and Yamada after the events of the TV series."
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Coming of Age/School/Female Protagonist/Male Protagonist/Primarily Teen Cast/Tsundere/Food/Chuunibyou/Shounen\nA re-edit of both anime seasons featuring newly added footage and will depict the story of Ichikawa and Yamada after the events of the TV series."
     },
     {
       "id": "tt36148135",
@@ -38,7 +38,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt38649153"
       },
-      "description": "Genres: Action, Comedy, Sci-Fi, Supernatural\nTags:Assassins\nA new movie to commemorate <i>Assassination Classroom's</i> 10th anniversary of the TV anime.<br>\n<br>\nIt adapts episodes previously omitted in the original anime series."
+      "description": "Genres: Action, Comedy, Sci-Fi, Supernatural\nTags:Shounen/Assassins\nA new movie to commemorate <i>Assassination Classroom's</i> 10th anniversary of the TV anime.<br>\n<br>\nIt adapts episodes previously omitted in the original anime series."
     },
     {
       "id": "tt32915652",
@@ -48,7 +48,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32915652"
       },
-      "description": "Genres: Action, Drama, Mecha, Sci-Fi\nTags:Real Robot/Military\nSecond movie in the Hathaway trilogy celebrating the Gundam franchise's 40th anniversary, and the second project in the \"UC NexT 0100 Project\" that will tackle the future of the UC timeline.\n<br><br>\nHaunted by past trauma, Hathaway is drawn to the mysterious girl Gigi Andalucia, whose strange powers stir memories within him. While swayed by her cryptic words, he continues preparing for Mafty’s mission — the attack on the Adelaide Conference. Meanwhile, Kenneth Sleg of the Federation Forces prepares a defense operation for the Adelaide Conference and a plan to eliminate Mafty, when he is approached by Handley Yoxon of the Criminal Police Organization with a secret proposal. As Hathaway and Kenneth pursue their respective goals, Gigi also sets off for Hong Kong to fulfill her own role. \n<br><br>\n(Source: GundamInfo)"
+      "description": "Genres: Action, Drama, Mecha, Sci-Fi\nTags:Military/Real Robot\nSecond movie in the Hathaway trilogy celebrating the Gundam franchise's 40th anniversary, and the second project in the \"UC NexT 0100 Project\" that will tackle the future of the UC timeline.\n<br><br>\nHaunted by past trauma, Hathaway is drawn to the mysterious girl Gigi Andalucia, whose strange powers stir memories within him. While swayed by her cryptic words, he continues preparing for Mafty’s mission — the attack on the Adelaide Conference. Meanwhile, Kenneth Sleg of the Federation Forces prepares a defense operation for the Adelaide Conference and a plan to eliminate Mafty, when he is approached by Handley Yoxon of the Criminal Police Organization with a secret proposal. As Hathaway and Kenneth pursue their respective goals, Gigi also sets off for Hong Kong to fulfill her own role. \n<br><br>\n(Source: GundamInfo)"
     },
     {
       "id": "tt32192760",
@@ -68,7 +68,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt37931873"
       },
-      "description": "Genres: Action, Comedy, Sci-Fi\nTags:Samurai/Gore/Shounen/Parody\nMovie remake of the Yoshiwara Enjou arc.\n<br><br>\n\nUpon meeting a young boy named Haruta who makes a living as a pickpocket, Gintoki discovers that he is pickpocketing out of a desire to meet his long-lost mother, Hiwa, Yoshiwara's number one courtesan. Gintoki and his friends venture to Yoshiwara to fulfill Haruta's wish, but standing in their way is Housen, the Night King who rules Yoshiwara.\n<br><br>\n<i>Note: This anime was announced at the \"Gintama Multiverse Festival,\" an event held on August 16th, as part of the \"Gintama 20th Anniversary Project.\" This movie features volumes 25 and 26 of the manga, and the TV anime series spans eight episodes, from episodes 139 to 146.</i>"
+      "description": "Genres: Action, Comedy, Sci-Fi\nTags:Shounen/Samurai/Gore/Parody\nMovie remake of the Yoshiwara Enjou arc.\n<br><br>\n\nUpon meeting a young boy named Haruta who makes a living as a pickpocket, Gintoki discovers that he is pickpocketing out of a desire to meet his long-lost mother, Hiwa, Yoshiwara's number one courtesan. Gintoki and his friends venture to Yoshiwara to fulfill Haruta's wish, but standing in their way is Housen, the Night King who rules Yoshiwara.\n<br><br>\n<i>Note: This anime was announced at the \"Gintama Multiverse Festival,\" an event held on August 16th, as part of the \"Gintama 20th Anniversary Project.\" This movie features volumes 25 and 26 of the manga, and the TV anime series spans eight episodes, from episodes 139 to 146.</i>"
     },
     {
       "id": "tt37874634",
@@ -78,7 +78,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt37874634"
       },
-      "description": "Genres: \nTags:Female Protagonist/Ballet/Foreign\n<i>\"I want to blossom, in this city.\"</i>\n<br><br>\nThe story follows two Japanese girls who never give up in reaching for étoile (stars) during the difficult times at the start of 20th century. Fujiko, who dreams of becoming a painter, and Chizuru, who is drawn into the world of ballet, meet by chance in Yokohama. Then, as if guided by fate, they meet again in Paris and work hard to follow their dreams together. <br><br>\n\n(Source: Anime News Network)"
+      "description": "Genres: \nTags:Foreign/Ballet/Female Protagonist\n<i>\"I want to blossom, in this city.\"</i>\n<br><br>\nThe story follows two Japanese girls who never give up in reaching for étoile (stars) during the difficult times at the start of 20th century. Fujiko, who dreams of becoming a painter, and Chizuru, who is drawn into the world of ballet, meet by chance in Yokohama. Then, as if guided by fate, they meet again in Paris and work hard to follow their dreams together. <br><br>\n\n(Source: Anime News Network)"
     },
     {
       "id": "tt36461929",
