Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -18,7 +18,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt38650422"
       },
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Coming of Age/Female Protagonist/Primarily Teen Cast/School/Tsundere/Male Protagonist/Food/Chuunibyou/Shounen\nA re-edit of both anime seasons featuring newly added footage and will depict the story of Ichikawa and Yamada after the events of the TV series."
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Coming of Age/Female Protagonist/Male Protagonist/Primarily Teen Cast/School/Tsundere/Food/Chuunibyou/Shounen\nA re-edit of both anime seasons featuring newly added footage and will depict the story of Ichikawa and Yamada after the events of the TV series."
     },
     {
       "id": "tt36148135",
