Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -88,7 +88,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt36461929"
       },
-      "description": "Genres: Drama, Mystery\nTags:\nAdaptation of Keigo Hagashino's <i>Kusunoki no Bannin</i> novel about a mysterious camphor tree that is said to grant wishes if you pray to it, and the young man who becomes its guardian."
+      "description": "Genres: Drama, Mystery, Supernatural\nTags:\nAdaptation of Keigo Hagashino's <i>Kusunoki no Bannin</i> novel about a mysterious camphor tree that is said to grant wishes if you pray to it, and the young man who becomes its guardian."
     },
     {
       "id": "tt39195826",
