Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -8,7 +8,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt38650409"
       },
-      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Isekai/Medieval/Male Protagonist/Demons/Agender/Shounen/Femboy\nThe second movie in the <i>Tensei Shitara Slime Datta Ken</i> series.<br><br>\nAfter concluding the opening ceremony of the Demon Kingdom Federation Tempest, Rimuru and his companions are invited by the Celestial Emperor Hermesia of the great elven nation – the Magi Dynasty Salion – to visit her private resort island. As the group enjoys their brief vacation, a mysterious woman named Yura appears. A new incident unfolds against the backdrop of the boundless azure sea.<br><br>\n\n(Source: Crunchyroll)<br><br>\n<i>Note: Relations are provisional and subject to change.</i>"
+      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Isekai/Medieval/Demons/Agender/Male Protagonist/Shounen/Femboy\nThe second movie in the <i>Tensei Shitara Slime Datta Ken</i> series.<br><br>\nAfter concluding the opening ceremony of the Demon Kingdom Federation Tempest, Rimuru and his companions are invited by the Celestial Emperor Hermesia of the great elven nation – the Magi Dynasty Salion – to visit her private resort island. As the group enjoys their brief vacation, a mysterious woman named Yura appears. A new incident unfolds against the backdrop of the boundless azure sea.<br><br>\n\n(Source: Crunchyroll)<br><br>\n<i>Note: Relations are provisional and subject to change.</i>"
     },
     {
       "id": "tt38650422",
@@ -18,7 +18,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt38650422"
       },
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Coming of Age/Female Protagonist/Male Protagonist/Primarily Teen Cast/School/Tsundere/Food/Chuunibyou/Shounen\nA re-edit of both anime seasons featuring newly added footage and will depict the story of Ichikawa and Yamada after the events of the TV series."
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Coming of Age/Male Protagonist/Female Protagonist/Primarily Teen Cast/School/Tsundere/Food/Chuunibyou/Shounen\nA re-edit of both anime seasons featuring newly added footage and will depict the story of Ichikawa and Yamada after the events of the TV series."
     },
     {
       "id": "tt36148135",
@@ -38,7 +38,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt38649153"
       },
-      "description": "Genres: Action, Comedy, Sci-Fi, Supernatural\nTags:Shounen/Assassins\nA new movie to commemorate <i>Assassination Classroom's</i> 10th anniversary of the TV anime.<br>\n<br>\nIt adapts episodes previously omitted in the original anime series."
+      "description": "Genres: Action, Comedy, Sci-Fi, Supernatural\nTags:Assassins/Shounen\nA new movie to commemorate <i>Assassination Classroom's</i> 10th anniversary of the TV anime.<br>\n<br>\nIt adapts episodes previously omitted in the original anime series."
     },
     {
       "id": "tt32915652",
@@ -48,7 +48,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32915652"
       },
-      "description": "Genres: Action, Drama, Mecha, Sci-Fi\nTags:Military/Real Robot\nSecond movie in the Hathaway trilogy celebrating the Gundam franchise's 40th anniversary, and the second project in the \"UC NexT 0100 Project\" that will tackle the future of the UC timeline.\n<br><br>\nHaunted by past trauma, Hathaway is drawn to the mysterious girl Gigi Andalucia, whose strange powers stir memories within him. While swayed by her cryptic words, he continues preparing for Mafty’s mission — the attack on the Adelaide Conference. Meanwhile, Kenneth Sleg of the Federation Forces prepares a defense operation for the Adelaide Conference and a plan to eliminate Mafty, when he is approached by Handley Yoxon of the Criminal Police Organization with a secret proposal. As Hathaway and Kenneth pursue their respective goals, Gigi also sets off for Hong Kong to fulfill her own role. \n<br><br>\n(Source: GundamInfo)"
+      "description": "Genres: Action, Drama, Mecha, Sci-Fi\nTags:Real Robot/Military\nSecond movie in the Hathaway trilogy celebrating the Gundam franchise's 40th anniversary, and the second project in the \"UC NexT 0100 Project\" that will tackle the future of the UC timeline.\n<br><br>\nHaunted by past trauma, Hathaway is drawn to the mysterious girl Gigi Andalucia, whose strange powers stir memories within him. While swayed by her cryptic words, he continues preparing for Mafty’s mission — the attack on the Adelaide Conference. Meanwhile, Kenneth Sleg of the Federation Forces prepares a defense operation for the Adelaide Conference and a plan to eliminate Mafty, when he is approached by Handley Yoxon of the Criminal Police Organization with a secret proposal. As Hathaway and Kenneth pursue their respective goals, Gigi also sets off for Hong Kong to fulfill her own role. \n<br><br>\n(Source: GundamInfo)"
     },
     {
       "id": "tt32192760",
@@ -98,7 +98,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt39195826"
       },
-      "description": "Genres: Comedy\nTags:Female Protagonist/Parody/Ensemble Cast/School Club/Cute Girls Doing Cute Things/School/Primarily Female Cast\nFour part adaptation of the <i>Girls und Panzer: Motto Love Love Sakusen desu!</i> manga.\n<br><br>\n(Source: Natalie Comics)"
+      "description": "Genres: Comedy\nTags:Female Protagonist/Parody/Ensemble Cast/School Club/Cute Girls Doing Cute Things/School/Primarily Female Cast/Yuri\nFour part adaptation of the <i>Girls und Panzer: Motto Love Love Sakusen desu!</i> manga.\n<br><br>\n(Source: Natalie Comics)"
     },
     {
       "id": "tt38507195",
